# openstack-ansible-nspawn_hosts

./: .gitreview  CONTRIBUTING.rst  README.rst  Vagrantfile  bindep.txt  setup.cfg  tox.ini
defaults/: main.yml
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst
examples/: playbook.yml
files/: lxc-image-fetch-url.py  nspawn-attach.sh
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py
tasks/: main.yml  nspawn_cache.yml  nspawn_cache_prestage.yml  nspawn_networking.yml  nspawn_volume.yml
templates/: dnsmasq-config.conf.j2  nspawn-dnsmasq-systemd-init.j2  nspawn-macvlan-systemd-init.j2  systemd-journald-nspawn_host.conf.j2  systemd-journald-tmpfiles.j2  systemd-nspawn-mv.netdev.j2  systemd-nspawn-mv.network.j2  systemd-nspawn@.service.j2
templates/prep-scripts/: _container_sys_setup.sh.j2  nspawn_centos_prep.sh.j2  nspawn_debian_prep.sh.j2  nspawn_opensuse_prep.sh.j2  nspawn_ubuntu_prep.sh.j2
tests/: ansible-role-requirements.yml  inventory  test.yml
vars/: debian-10.yml  debian-9.yml  main.yml  redhat-7.yml  suse-15.yml  suse-42.yml  ubuntu-16.04.yml  ubuntu-18.04.yml  ubuntu-20.04.yml  ubuntu.yml
zuul.d/: jobs.yaml  project.yaml
